db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: ozone
spec:
  type: ClusterIP
  selector:
    app: mariadb
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
